# hs-ffi-plugins

./: default.nix  readme.md  shell.nix
dyn2/: dyn2.cabal
dyn2/src/: Plug2.hs
hs/: plugins-export.cabal  shell.nix
hs/csrc/: plugins-hs.c  plugins-hs.h
hs/src/System/Plugins/: Export.hs
interpret-me/: Blah.hs
interpret-me/Blah/: Inner.hs
nix/: sources.json
plugs/: Main.hs  plugs.cabal
plugs/src/: Plugs.hs
rs/: Cargo.nix  Cargo.toml  build.rs  shell.nix
rs/examples/: include-stuff.hs  repl.rs  simple.rs  test.hs
rs/src/: bytes.rs  dynamic.rs  iface.rs  lib.rs  list.rs  main.rs  session.rs
